<resources>
    <string name="app_name">超级身份</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">网络配置</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="footprint">足迹</string>
    <string name="order">订单</string>
    <string name="pull_refresh">下拉刷新</string>
    <string name="last_update_time">最后刷新时间: 2014-03-01 09:09:09</string>
    <string name="splash_ad_info">无声的尊贵</string>
    <string name="pull_loading">上拉加载...</string>
    <string name="need_help">需要帮助？</string>
    <string name="use_protocal">使用协议</string>
    <string name="click_to_agree">点击确定, 即同意</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_new_phone_number">请输入新手机号</string>
    <string name="phone_verify_title">验证手机号</string>

    <string name="no_order_tip_msg">您没有任何预定信息，立即预定</string>
    <string name="ad_push_tip_msg">温德姆豪庭大酒店5折起</string>
    <string name="action_option_tip_msg">点击智键进入酒店列表</string>
    
    <string name="svip_mine">个人信息</string>
    <string name="mine_finish">完成</string>

    <string name="mine_set_name_hint">姓</string>
    <string name="mine_set_position_hint">称呼 / 职位</string>
    <string name="mine_set_unit_hint">公司 / 单位</string>

    <string name="no_more_data">暂无更多数据</string>
    <string name="no_data">暂无数据</string>

    <string name="svip_cut">选取</string>
    <string name="choose_hotel">选择酒店</string>
    <string name="book_hotel">预定酒店</string>
    <string name="business">商务</string>
    <string name="luxury">豪华</string>
    <string name="low_cost">经济</string>
    <string name="all">全部</string>
    <string name="double_breakfast">双早</string>
    <string name="single_breakfast">单早</string>
    <string name="book_right_now">立刻预定</string>
    <string name="sweet_prompt">*温馨提示</string>
    <string name="sure_option">确认</string>
    <string name="cancel_option">取消</string>
    <string name="option_prompty">选择将要执行的操作</string>
    <string name="sweet_prompt_one">1、成功预订需要酒店回馈，请注意订单通知</string>
    <string name="sweet_prompt_two">2、如需退房退款，请和酒店联系</string>
    <string name="choose_check_in_and_out_date">选择入住\退房日期</string>

    <string name="order_unconfirmed">未确认</string>
    <string name="order_cancelled">已取消</string>
    <string name="order_confirmed">已确认</string>
    <string name="order_finished">已完成</string>
    <string name="order_using">进行中</string>
    <string name="trade_deleted">已删除</string>

    <string name="booking_order">预订中的订单</string>
    <string name="pay_cc">到酒店后支付</string>
    <string name="chat">聊天</string>
    <string name="message">消息</string>
    <string name="pay">支付</string>
    <string name="cancel_order">取消订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="submit_order">提交订单</string>
    <string name="message_center">消息中心</string>

    <string name="phone_prompty">可能是一个电话号码,你可以</string>

    <string name="default_rule_type">DefaultChatRuleType</string>

    <string name="copyright_notice">中科金石   版权所有</string>
    <string name="copyright_duration">Copyright ©2015 www.zkjinshi.com</string>
    <string name="copyright_own">All Rights Reserved</string>
    <string name="complete_info">完善资料</string>
    <string name="nickname">昵称</string>
    <string name="invite_code">邀请码</string>
    <string name="what_is_invite_code">什么是邀请码？</string>
    <string name="get_into_next_step_if_not_exists">若无邀请码，请进入下一步</string>
    <string name="update_user_info_success">更新用户信息成功</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_input_username">请输入姓名</string>
    <string name="please_input_userphoto">请上传身份识别头像</string>
    <string name="please_choose_sex">请选择性别</string>
    <string name="net_exception">网络异常</string>
    <string name="request_cancel">请求取消</string>
    <string name="service_center">服务中心</string>
    <string name="add">新增</string>
    <string name="search">搜索</string>
    <string name="add_contact">添加好友</string>
    <string name="ignore_all_msg">忽略所有信息</string>
    <string name="clear_all_msg">清空所有聊天</string>
    <string name="edit_contacts">编辑通讯录</string>
    <string name="current_none">暂无</string>
    <string name="please_input_real_name">请输入真实姓名</string>

    <!--音频通话和语音通话-->
    <string name="call_duration">通话时长</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="Are_connected_to_each_other">正在连接对方...</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受...</string>
    <string name="direct_call">Direct</string>
    <string name="relay_call">Relay</string>
    <string name="In_the_call">通话中...</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！...</string>
    <string name="Connection_failure">连接建立失败！...</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨...</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="hanging_up">正在挂断..</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="exit">退出</string>
    <string name="if_exit_the_current_account_or_not">确定退出当前账户？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="order_confirm">订单确认</string>
    <string name="you_have_a_new_unconfirm_order">您有一条待确认订单。</string>
    <string name="tv_pieces_of_evaluation">条评价</string>
    <string name="phone">电话</string>
    <string name="evaluate_score">评分</string>
    <string name="latest">最近</string>
    <string name="no_login">无登录</string>
    <string name="consult_immediately">立刻咨询</string>
    <string name="where_you_want_go_and_enjoy_services">想去哪里，享受尊贵服务？</string>
    <string name="where_to_go_and_who_are_you_looking_for">想去哪里，想找谁？</string>

    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="assistant_upload_dialog_title">提示</string>
    <string name="locating">定位中</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>
    <string name="shenzhen">深圳</string>
    <string name="shenzhen_city">深圳市</string>
    <string name="contacts">联系人</string>
    <string name="address_book">通讯录</string>
    <string name="nearby">附近</string>

    <!--底部栏标题-->
    <string name="footer_tab_txt_home">首页</string>
    <string name="footer_tab_txt_shop">商家</string>
    <string name="footer_tab_txt_message">消息</string>
    <string name="footer_tab_txt_set">我</string>
    <string name="chang_sha">长沙</string>

    <!--ListView加载-->
    <string name="refresh_after_release">松开立即刷新</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="loading_more_data">正在加载更多数据</string>
    <string name="pull_up_load_more_data">上拉加载更多</string>
    <string name="latest_update">最后更新</string>
    <string name="refreshing_now">正在刷新中</string>
    <string name="have_no_order_yet">您还没有订单。</string>
    <string name="check_your_orders">查看已有订单</string>
    <string name="login_immediately">立即登录</string>
    <string name="find_your_next_trip">找到您的下一个旅程</string>
    <string name="search_by_lbs_and_provide_the_best_service">按地点进行搜索，为您推荐最好的服务。</string>
    <string name="discover_service">发现服务</string>
    <string name="have_no_comment_yet">暂无评论</string>
    <string name="the_user_do_not_give_a_comment">此用户未进行评价。</string>
    <string name="comment">评论</string>
    <string name="no_name">匿名</string>
    <string name="credit_introduction">
        一、消费积分累计规则：\n
        "       "消费积分：消费金额10元=1积分；积分计算过程中，不足10元的数值取整。\n
        示例：张先生预订酒店，订单消费金额为259元，则其积分回馈为25分（259*10=25.9，取整为25分）。\n
        "       "生成时间：按每笔订单消费完成后，发放至用户的积分账户\n
        二、积分说明：\n
        "       "超级身份VIP积分计划是为答谢用户对我们的支持与厚爱而推出的一项用户回馈服务。
        累计的积分之后可以通过积分商城等渠道兑换丰富多样的商品。
    </string>

</resources>
