<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <RadioGroup
        android:id="@+id/footer_tab_rg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_centerVertical="true"
        android:background="@null"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/footer_tab_rb_home"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:text="@string/footer_tab_txt_home"
            android:drawableTop="@drawable/footer_rb_home" />

        <RadioButton
            android:id="@+id/footer_tab_rb_shop"
            style="@style/main_tab_bottom"
            android:text="@string/footer_tab_txt_shop"
            android:drawableTop="@drawable/footer_rb_shop" />

        <RadioButton
            android:id="@+id/footer_tab_rb_message"
            style="@style/main_tab_bottom"
            android:text="@string/footer_tab_txt_message"
            android:drawableTop="@drawable/footer_rb_message" />

        <RadioButton
            android:id="@+id/footer_tab_rb_set"
            style="@style/main_tab_bottom"
            android:text="@string/footer_tab_txt_set"
            android:drawableTop="@drawable/footer_rb_set" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            style="@style/main_tab_bottom"
            android:background="@drawable/footer_rb_home"
            android:visibility="invisible" />

        <Button
            style="@style/main_tab_bottom"
            android:background="@drawable/footer_rb_shop"
            android:visibility="invisible" />

        <Button
            android:id="@+id/footer_tab_btn_message_num"
            style="@style/main_tab_bottom"
            android:background="@drawable/footer_rb_message"
            android:visibility="invisible" />

        <Button
            style="@style/main_tab_bottom"
            android:background="@drawable/footer_rb_set"
            android:visibility="invisible" />

    </LinearLayout>

</RelativeLayout>