<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_notice_card"
    android:visibility="invisible"
    android:gravity="center">

    <RelativeLayout
        android:id="@+id/rl_card"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_gray_border"
        android:padding="10dp">

        <FrameLayout
            android:id="@+id/fl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_no_order_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:textColor="@color/darkGray"
                    android:text="@string/find_your_next_trip"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_content"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/search_by_lbs_and_provide_the_best_service"
                    android:textColor="@color/lightGray"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_no_login_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="invisible"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_check_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:padding="2dp"
                    android:gravity="center"
                    android:text="@string/check_your_orders"
                    android:textColor="@color/darkGray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_toRightOf="@+id/tv_check_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:padding="2dp"
                    android:text="@string/login_immediately"
                    android:textColor="@color/Orangeff9800"
                    android:textSize="14sp" />

            </RelativeLayout>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_text"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <Button
                android:id="@+id/btn_discover_service"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_btn_orange_to_gray"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/discover_service"
                android:textColor="@color/white"
                android:textSize="14dp" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>