<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eeeeee"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            fresco:actualImageScaleType="fitXY"
            fresco:placeholderImage="@mipmap/url_image_loading"
            fresco:placeholderImageScaleType="centerCrop"
            fresco:failureImage="@mipmap/url_image_failed"
            fresco:failureImageScaleType="centerInside"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/TransparentLightGray">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/header_bar_btn_back"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_horizontal"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:clickable="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/header_ibtn_back"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:text="@string/app_name"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_online_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/latest"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_latest_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="@string/no_login"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_online_info"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:paddingRight="15dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/ibtn_dial"
            android:layout_width="16dp"
            android:layout_height="16.70dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@mipmap/ic_tuijian_dianhua"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/evaluate_score"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_evaluate_score"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:padding="5dp"
            android:text="0.0"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_order_evaluate_poor"
                    style="@style/iv_star" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_order_evaluate_common"
                    style="@style/iv_star" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_order_evaluate_gratify"
                    style="@style/iv_star" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_order_evaluate_great_gratify"
                    style="@style/iv_star" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_order_evaluate_highly_recommend"
                    style="@style/iv_star" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_consult_immediately"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_btn_orange_to_gray"
            android:text="@string/consult_immediately"
            android:textColor="#ffffff" />

    </RelativeLayout>


</LinearLayout>